--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,10 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <meta name="description" content="Canal de comunicación para el equipo de desarrollo de Fitco Latam" />
+
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/assets/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/assets/favicon/site.webmanifest" />
+
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+    <title>Fitco Latam - Team Channel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
